# 2048

./: Makefile  README.md  main.py  pyproject.toml  setup.py  tox.ini
