[tool.poetry]
name = "2048"
version = "0.1.4"
description = "2048 written in Python by the Ladue High School Computer Science Club"
authors = ["Anthony Wang <ta180m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
