[tool.poetry]
name = "2048-py"
version = "0.1.4-12"
description = "2048 written in Python by the Ladue High School Computer Science Club"
readme = "README.md"
authors = ["Anthony Wang <ta180m@gmail.com>"]
license = "GPLv3"
packages = [
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
